forgot to add swagger descriptions for requests
